--- a/_posts/free-recharge/2016-01-25-freeb-in.markdown
+++ b/_posts/free-recharge/2016-01-25-freeb-in.markdown
@@ -4,6 +4,7 @@ title:  "FreeB App - Earn 50 Rs Per Refer"
 permalink: /freeb-referal-invite-and-earn-app.html
 categories: 
 - freerechargetricks
+ogimg: https://4.bp.blogspot.com/-Z3fvP7ky8uU/VqYRl4kWAzI/AAAAAAAACmo/sqYq8KTcVco/s1600/freeb-invite-and-earn-free-recharge.png
 ---
 
 Freeb.in is another invite and earn based mobile application, in this app you can earn money in two ways, first by refering this app to your friends, and second  is by completing online offers.
