--- a/_posts/2016-01-25-freeb-in.md
+++ b/_posts/2016-01-25-freeb-in.md
@@ -2,9 +2,11 @@
 layout: post
 title:  "FreeB App - Earn 50 Rs Per Refer"
 permalink: /freeb-referal-invite-and-earn-app.html
-categories: 
-- freerechargetricks
+description: Invite your friends to freeB app and get 50Rs per new referral.
+categories: freerechargetricks
 ogimg: https://4.bp.blogspot.com/-Z3fvP7ky8uU/VqYRl4kWAzI/AAAAAAAACmo/sqYq8KTcVco/s1600/freeb-invite-and-earn-free-recharge.png
+mycat: Free Recharge Tricks
+catlink: free-recharge-tricks-and-offers.html
 ---
 
 Freeb.in is another invite and earn based mobile application, in this app you can earn money in two ways, first by refering this app to your friends, and second  is by completing online offers.
